[package]
name = "cucumis"
version = "0.1.0"
edition = "2021"
description = "hack.chat tunnel that resolves DNS pollution"
license = "Unlicense"
repository = "https://github.com/jwcub/cucumis"
homepage = "https://github.com/jwcub/cucumis"
keywords = ["hack", "chat", "tunnel", "hackchat"]
categories = ["command-line-utilities", "web-programming::websocket"]
authors = ["jwcub <jwcub@outlook.com>"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
futures-util = "0.3.30"
rustls-native-certs = "0.7.1"
tokio = { version = "1.39.2", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "io-std",
    "tracing",
] }
tokio-rustls = { version = "0.26.0", default-features = false, features = [
    "ring",
    "tls12",
] }
tokio-tungstenite = { version = "0.23.1", default-features = false, features = [
    "connect",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
